--- a/index.html
+++ b/index.html
@@ -294,6 +294,6 @@
         </li>
       </ul>
     </section>
-    <script src="main.js" />
+    <script src="main.js"></script>
   </body>
 </html>
