cleanup file names

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
     <ul class="list list--documents">
       <li class="list-item list-item--document">
         <div>
-          <a class="main-action" href="#clicked-person-1">2025 Company Handbook</a>
+          <a class="main-action" href="#clicked-person-1">Company Handbook</a>
           <ul class="metadata">
             <li>PDF</li>
             <li>56.78 KB</li>
@@ -210,7 +210,7 @@
       </li>
       <li class="list-item list-item--document">
         <div>
-          <a class="main-action" href="#clicked-document-2">2025 Social Media Guidelines</a>
+          <a class="main-action" href="#clicked-document-2">Social Media Guidelines</a>
           <ul class="metadata">
             <li>PDF</li>
             <li>234.56 KB</li>
@@ -242,7 +242,7 @@
       </li>
       <li class="list-item list-item--document">
         <div>
-          <a class="main-action" href="#clicked-document-3">2025 W-2</a>
+          <a class="main-action" href="#clicked-document-3">W-2</a>
           <ul class="metadata">
             <li>PDF</li>
             <li>12.34 KB</li>
