--- a/index.html
+++ b/index.html
@@ -10,166 +10,125 @@
 
 <body>
   <section>
-    <h2>People</h2>
+    <h2>PTO policies</h2>
     <p class="secondary">
-      All actions hidden at first, exposed on hover or focus
+      All actions shown
     </p>
-    <ul class="list list--people">
-      <li class="list-item list-item--person">
-        <div>
-          <a class="main-action" href="#clicked-person-1">Ed Regis</a>
-          <div class="title">Manager, PR</div>
-          <ul class="metadata">
-            <li>
-              <i class="ph ph-users"></i>
-              <a href="#clicked-dept-1">Leadership</a>
-            </li>
-            <li>
-              <i class="ph ph-building-office"></i>
-              <a href="#clicked-office-1" class="office-link" aria-controls="office-california">California</a>
-            </li>
-          </ul>
+    <ul class="list list--pto-policies">
+      <li class="list-item">
+        <div class="list-item__pto-policy-id">
+          <a class="main-action" href="#clicked-policy-1">Jury Duty</a>
+          <span class="tag">Other</span>
+        </div>
+        <div class="list-item__pto-policy-attributes">
+          <dl>
+            <div>
+              <dt>Effective date</dt>
+              <dd>Sep 13, 2023</dd>
+            </div>
+            <div>
+              <dt>Employees assigned</dt>
+              <dd>56</dd>
+            </div>
+          </dl>
         </div>
         <div>
           <ul class="actions">
             <li>
               <button>
-                <i class="ph ph-phone" aria-label="Call" title="Call"></i>
+                <i class="ph ph-pencil-simple" aria-label="Edit" title="Edit"></i>
               </button>
             </li>
             <li>
               <button>
-                <i class="ph ph-envelope" aria-label="Email" title="Email"></i>
+                <i class="ph ph-user-check" aria-label="Assign users" title="Assign users"></i>
               </button>
             </li>
             <li>
-              <button class="destructive">
-                <i class="ph ph-trash" aria-label="Delete" title="Delete"></i>
+              <button>
+                <i class="ph ph-pause-circle" aria-label="Deactivate" title="Deactivate"></i>
               </button>
             </li>
           </ul>
         </div>
       </li>
-      <li class="list-item list-item--person">
-        <div>
-          <a class="main-action" href="#clicked-person-2">Ian Malcolm</a>
-          <div class="title">Chaos Theorist</div>
-          <ul class="metadata">
-            <li>
-              <i class="ph ph-users"></i>
-              <a href="#clicked-dept-2">Science</a>
-            </li>
-            <li>
-              <i class="ph ph-building-office"></i>
-              <a href="#clicked-office-2" class="office-link" aria-controls="office-texas">Texas</a>
-            </li>
-          </ul>
+      <li class="list-item">
+        <div class="list-item__pto-policy-id">
+          <a class="main-action" href="#clicked-policy-2">NYC Safe &amp; Sick Leave</a>
+          <span class="tag">Sick leave</span>
+        </div>
+        <div class="list-item__pto-policy-attributes">
+          <dl>
+            <div>
+              <dt>Effective date</dt>
+              <dd>Sep 13, 2023</dd>
+            </div>
+            <div>
+              <dt>Employees assigned</dt>
+              <dd>56</dd>
+            </div>
+          </dl>
         </div>
         <div>
           <ul class="actions">
             <li>
               <button>
-                <i class="ph ph-phone" aria-label="Call" title="Call"></i>
+                <i class="ph ph-pencil-simple" aria-label="Edit" title="Edit"></i>
               </button>
             </li>
             <li>
               <button>
-                <i class="ph ph-envelope" aria-label="Email" title="Email"></i>
+                <i class="ph ph-user-check" aria-label="Assign users" title="Assign users"></i>
               </button>
             </li>
             <li>
-              <button class="destructive">
-                <i class="ph ph-trash" aria-label="Delete" title="Delete"></i>
+              <button>
+                <i class="ph ph-pause-circle" aria-label="Deactivate" title="Deactivate"></i>
               </button>
             </li>
           </ul>
         </div>
       </li>
-      <li class="list-item list-item--person">
-        <div>
-          <a class="main-action" href="#clicked-person-3">Tim Murphy</a>
-          <div class="title">Intern</div>
-          <ul class="metadata">
-            <li>
-              <i class="ph ph-users"></i>
-              <a href="#clicked-dept-3">Operations</a>
-            </li>
-            <li>
-              <i class="ph ph-building-office"></i>
-              <a href="#clicked-office-3" class="office-link" aria-controls="office-florida">Florida</a>
-            </li>
-          </ul>
+            <li class="list-item">
+        <div class="list-item__pto-policy-id">
+          <a class="main-action" href="#clicked-policy-3">Personal Time</a>
+          <span class="tag">Vacation</span>
+        </div>
+        <div class="list-item__pto-policy-attributes">
+          <dl>
+            <div>
+              <dt>Effective date</dt>
+              <dd>Sep 13, 2023</dd>
+            </div>
+            <div>
+              <dt>Employees assigned</dt>
+              <dd>56</dd>
+            </div>
+          </dl>
         </div>
         <div>
           <ul class="actions">
             <li>
               <button>
-                <i class="ph ph-phone" aria-label="Call" title="Call"></i>
+                <i class="ph ph-pencil-simple" aria-label="Edit" title="Edit"></i>
               </button>
             </li>
             <li>
               <button>
-                <i class="ph ph-envelope" aria-label="Email" title="Email"></i>
+                <i class="ph ph-user-check" aria-label="Assign users" title="Assign users"></i>
               </button>
             </li>
             <li>
-              <button class="destructive">
-                <i class="ph ph-trash" aria-label="Delete" title="Delete"></i>
+              <button>
+                <i class="ph ph-pause-circle" aria-label="Deactivate" title="Deactivate"></i>
               </button>
             </li>
           </ul>
         </div>
       </li>
     </ul>
-
-    <!--
-      These popovers don't reposition as you scroll, it'd be nice if you could
-      move your cursor into them without them disappearing, etc. But it gets
-      the point across.
-    -->
-    <dialog class="dialog--office" id="office-california">
-      <h3>California</h3>
-      <address>
-        347 North Rodeo Drive<br />
-        Beverly Hills CA 90210
-      </address>
-      <ul class="list--avatar-stack stack-overflow">
-        <li class="list-item--avatar"><span class="avatar avatar--blue">AB</span></li>
-        <li class="list-item--avatar"><span class="avatar avatar--green">BC</span></li>
-        <li class="list-item--avatar"><span class="avatar avatar--red">CD</span></li>
-        <li class="list-item--avatar"><span class="avatar avatar--yellow">DE</span></li>
-        <li class="list-item--avatar"><span class="avatar avatar--purple">EF</span></li>
-        <li class="list-item--endnote">+2 more</li>
-      </ul>
-    </dialog>
-    <dialog class="dialog--office" id="office-florida">
-      <h3>Florida</h3>
-      <address>
-        180 Seven Seas Dr<br />
-        Orlando FL 32830
-      </address>
-      <ul class="list--avatar-stack stack-overflow">
-        <li class="list-item--avatar"><span class="avatar avatar--blue">AB</span></li>
-        <li class="list-item--avatar"><span class="avatar avatar--green">BC</span></li>
-        <li class="list-item--avatar"><span class="avatar avatar--red">CD</span></li>
-        <li class="list-item--avatar"><span class="avatar avatar--yellow">DE</span></li>
-        <li class="list-item--avatar"><span class="avatar avatar--purple">EF</span></li>
-        <li class="list-item--endnote">+12 more</li>
-      </ul>
-    </dialog>
-    <dialog class="dialog--office" id="office-texas">
-      <h3>Texas</h3>
-      <address>
-        8400 Kirby Dr<br />
-        Houston TX 77054
-      </address>
-      <ul class="list--avatar-stack">
-        <li class="list-item--avatar"><span class="avatar avatar--blue">AB</span></li>
-        <li class="list-item--avatar"><span class="avatar avatar--green">BC</span></li>
-        <li class="list-item--avatar"><span class="avatar avatar--red">CD</span></li>
-      </ul>
-    </dialog>
   </section>
+
   <section>
     <h2>Documents</h2>
     <p class="secondary">
@@ -273,6 +232,153 @@
         </div>
       </li>
     </ul>
+  </section>
+  
+  <section>
+    <h2>People</h2>
+    <p class="secondary">
+      All actions hidden at first, exposed on hover or focus
+    </p>
+    <ul class="list">
+      <li class="list-item">
+        <div>
+          <a class="main-action" href="#clicked-person-1">Ed Regis</a>
+          <div class="title">Manager, PR</div>
+          <ul class="metadata">
+            <li>
+              <i class="ph ph-users"></i>
+              <a href="#clicked-dept-1">Leadership</a>
+            </li>
+            <li>
+              <i class="ph ph-building-office"></i>
+              <a href="#clicked-office-1" class="office-link" aria-controls="office-california">California</a>
+            </li>
+          </ul>
+        </div>
+        <div>
+          <ul class="actions">
+            <li>
+              <button>
+                <i class="ph ph-phone" aria-label="Call" title="Call"></i>
+              </button>
+            </li>
+            <li>
+              <button>
+                <i class="ph ph-envelope" aria-label="Email" title="Email"></i>
+              </button>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li class="list-item">
+        <div>
+          <a class="main-action" href="#clicked-person-2">Ian Malcolm</a>
+          <div class="title">Chaos Theorist</div>
+          <ul class="metadata">
+            <li>
+              <i class="ph ph-users"></i>
+              <a href="#clicked-dept-2">Science</a>
+            </li>
+            <li>
+              <i class="ph ph-building-office"></i>
+              <a href="#clicked-office-2" class="office-link" aria-controls="office-texas">Texas</a>
+            </li>
+          </ul>
+        </div>
+        <div>
+          <ul class="actions">
+            <li>
+              <button>
+                <i class="ph ph-phone" aria-label="Call" title="Call"></i>
+              </button>
+            </li>
+            <li>
+              <button>
+                <i class="ph ph-envelope" aria-label="Email" title="Email"></i>
+              </button>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li class="list-item">
+        <div>
+          <a class="main-action" href="#clicked-person-3">Tim Murphy</a>
+          <div class="title">Intern</div>
+          <ul class="metadata">
+            <li>
+              <i class="ph ph-users"></i>
+              <a href="#clicked-dept-3">Operations</a>
+            </li>
+            <li>
+              <i class="ph ph-building-office"></i>
+              <a href="#clicked-office-3" class="office-link" aria-controls="office-florida">Florida</a>
+            </li>
+          </ul>
+        </div>
+        <div>
+          <ul class="actions">
+            <li>
+              <button>
+                <i class="ph ph-phone" aria-label="Call" title="Call"></i>
+              </button>
+            </li>
+            <li>
+              <button>
+                <i class="ph ph-envelope" aria-label="Email" title="Email"></i>
+              </button>
+            </li>
+          </ul>
+        </div>
+      </li>
+    </ul>
+
+    <!--
+      These popovers don't reposition as you scroll, it'd be nice if you could
+      move your cursor into them without them disappearing, etc. But it gets
+      the point across.
+    -->
+    <dialog class="dialog--office" id="office-california">
+      <h3>California</h3>
+      <address>
+        347 North Rodeo Drive<br />
+        Beverly Hills CA 90210
+      </address>
+      <ul class="list--avatar-stack stack-overflow">
+        <li class="list-item--avatar"><span class="avatar avatar--blue">AB</span></li>
+        <li class="list-item--avatar"><span class="avatar avatar--green">BC</span></li>
+        <li class="list-item--avatar"><span class="avatar avatar--red">CD</span></li>
+        <li class="list-item--avatar"><span class="avatar avatar--yellow">DE</span></li>
+        <li class="list-item--avatar"><span class="avatar avatar--purple">EF</span></li>
+        <li class="list-item--endnote">+2 more</li>
+      </ul>
+    </dialog>
+    <dialog class="dialog--office" id="office-florida">
+      <h3>Florida</h3>
+      <address>
+        180 Seven Seas Dr<br />
+        Orlando FL 32830
+      </address>
+      <ul class="list--avatar-stack stack-overflow">
+        <li class="list-item--avatar"><span class="avatar avatar--blue">AB</span></li>
+        <li class="list-item--avatar"><span class="avatar avatar--green">BC</span></li>
+        <li class="list-item--avatar"><span class="avatar avatar--red">CD</span></li>
+        <li class="list-item--avatar"><span class="avatar avatar--yellow">DE</span></li>
+        <li class="list-item--avatar"><span class="avatar avatar--purple">EF</span></li>
+        <li class="list-item--endnote">+12 more</li>
+      </ul>
+    </dialog>
+    <dialog class="dialog--office" id="office-texas">
+      <h3>Texas</h3>
+      <address>
+        8400 Kirby Dr<br />
+        Houston TX 77054
+      </address>
+      <ul class="list--avatar-stack">
+        <li class="list-item--avatar"><span class="avatar avatar--blue">AB</span></li>
+        <li class="list-item--avatar"><span class="avatar avatar--green">BC</span></li>
+        <li class="list-item--avatar"><span class="avatar avatar--red">CD</span></li>
+      </ul>
+    </dialog>
   </section>
   <script src="main.js"></script>
 </body>
