updated PTO policies

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </div>
           </dl>
         </div>
-        <div>
+        <div class="list-item__pto-policy-actions">
           <ul class="actions">
             <li>
               <button>
@@ -61,15 +61,15 @@
           <dl>
             <div>
               <dt>Effective date</dt>
-              <dd>Sep 13, 2023</dd>
+              <dd>Oct 2, 2022</dd>
             </div>
             <div>
               <dt>Employees assigned</dt>
-              <dd>56</dd>
+              <dd>14</dd>
             </div>
           </dl>
         </div>
-        <div>
+        <div class="list-item__pto-policy-actions">
           <ul class="actions">
             <li>
               <button>
@@ -89,7 +89,7 @@
           </ul>
         </div>
       </li>
-            <li class="list-item">
+      <li class="list-item">
         <div class="list-item__pto-policy-id">
           <a class="main-action" href="#clicked-policy-3">Personal Time</a>
           <span class="tag">Vacation</span>
@@ -98,7 +98,7 @@
           <dl>
             <div>
               <dt>Effective date</dt>
-              <dd>Sep 13, 2023</dd>
+              <dd>Apr 9, 2021</dd>
             </div>
             <div>
               <dt>Employees assigned</dt>
@@ -106,7 +106,7 @@
             </div>
           </dl>
         </div>
-        <div>
+        <div class="list-item__pto-policy-actions">
           <ul class="actions">
             <li>
               <button>
@@ -233,7 +233,7 @@
       </li>
     </ul>
   </section>
-  
+
   <section>
     <h2>People</h2>
     <p class="secondary">
